fp-library/tests/ui/new_send_not_sync.stderr
error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> tests/ui/new_send_not_sync.rs:8:54
   |
 8 |       let _ = <ArcFnBrand as SendClonableFn>::new_send(move |_: ()| {
   |               ---------------------------------------- ^-----------
   |               |                                        |
   |  _____________|________________________________________within this `{closure@$DIR/tests/ui/new_send_not_sync.rs:8:54: 8:66}`
   | |             |
   | |             required by a bound introduced by this call
 9 | |         println!("{:?}", cell);
10 | |     });
   | |_____^ `RefCell<i32>` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/new_send_not_sync.rs:8:54: 8:66}`, the trait `Sync` is not implemented for `RefCell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it's used within this closure
  --> tests/ui/new_send_not_sync.rs:8:54
   |
 8 |     let _ = <ArcFnBrand as SendClonableFn>::new_send(move |_: ()| {
   |                                                      ^^^^^^^^^^^^
note: required by a bound in `fp_library::classes::send_clonable_fn::SendClonableFn::new_send`
  --> src/classes/send_clonable_fn.rs
   |
   |     fn new_send<'a, A, B>(
   |        -------- required by a bound in this associated function
   |         f: impl 'a + Fn(A) -> B + Send + Sync
   |                                          ^^^^ required by this bound in `SendClonableFn::new_send`
